# manif

./: .gitignore  README.md
.github/workflows/: ci.yml
examples/: se2_localization.cpp  se2_sam.cpp
examples/custom_exps/: CMakeLists.txt  README.md
examples/custom_exps/src/: foo.cpp  foo1.cpp  init.txt  opt.txt  plots.py  sam.cpp  tmp.cpp
examples/custom_exps/src/input/: input_intel.g2o  input_simulated.g2o
examples/custom_exps/src/output/: opt_simulated.g2o
